Fixed word wrap in source area

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1447,7 +1447,7 @@ z-index: 10000;
     height: 95%;
     outline: none;
     word-wrap: break-word;
-    word-break: break-all;
+    word-break: normal;
 }
 .text a{text-decoration:none;color:#000 }
 
